tests/paczka1/small_fuzzy/57162003.err
Error in line 3: A757 A757 49,5
Error in line 4: bIW2T97 A655 52,9
Error in line 1: m0IQVAOH1Q0 A909 10,2
